refactor(user): Actualizar servicio y controlador de User para API REST
En UserService, se ha eliminado la lógica CRUD duplicada que existía al usar tanto controladores REST como Web. Ahora solo hay 1 método para cada acción.

También se han incluido métodos para la asignación de roles a usuarios, de manera que es un User el encargado de gestionar sus propios roles, y no al revés (desde Role no se puede cambiar qué usuarios están asignados a él).

Refs #56